# fitlog

./: .dockerignore  .env.demo  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.pi  README.md  README_ja.md  SETUP.md  SETUP_ja.md  Taskfile.yaml  Taskfile.yaml.bak2  compose.demo.pi.yaml  compose.demo.yaml  compose.yaml  pyproject.toml  temp_taskfile.yaml
fitlog/: __init__.py  fetch.py  influx_writer.py  mock_data.py
fitlog/auth/: README.md
grafana/dashboards/: health-overview.json
grafana/provisioning/datasources/: influxdb.yml
scripts/: run.sh  setup_cron.sh
tests/: test_influx_writer.py
